[project]
name = "comfyui_slothful_attention"
description = "This custom node allow controlling output without training. The reducing method is similar to [a/Spatial-Reduction Attention](https://paperswithcode.com/method/spatial-reduction-attention), but generating speed may not be increased on typical image sizes due to overheads. (In some cases, slightly slower)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MitoshiroPJ/comfyui_slothful_attention"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_slothful_attention"
Icon = ""
